--- a/portfolio.html
+++ b/portfolio.html
@@ -11,19 +11,19 @@
         <nav>
             <img src="C:\Users\jsiva\OneDrive\Pictures\Camera imports\download.jpeg" class="logo">
             <ul>
-                <li><a href="file:///C:/Users/jsiva/OneDrive/Documents/portfolio.html">Home</a></li>
-                <li><a href="https://myaccount.google.com/?hl=en&utm_source=OGB&utm_medium=act&pli=1" target="_blank">About</a></li>
-                <li><a href="https://wa.link/3bd7h7" target="_blank">Contact</a></li>
+                <li><a herf="#">Home</a></li>
+                <li><a href="#" target="_blank">About</a></li>
+                <li><a href="#" target="_blank">Contact</a></li>
             </ul>
         </nav>
         <div class="info">
             <h1>I am SIVA</h1>
             <p> Here i am doing my Portfolio in VisualStudio By Html&CSS.<br>And this the Web Page That you see my " Portfolio".</p>
-            <a href=https://www.instagram.com/siva.junuthula/ target="_blank">FOLLOW</a>
+            <a href=# target="_blank">FOLLOW</a>
         </div>
         <div class="right-image">
-            <img src="C:\Users\jsiva\OneDrive\Pictures\Saved Pictures\background-shapes-png-1-Images-PNG-Transparent.png" class="shape">
-            <img src="C:\Users\jsiva\OneDrive\Pictures\Saved Pictures\Picsart_24-07-07_07-37-47-998.png" height="15%" width="65%">
+            <img src="Shape png " class="shape">
+            <img src="Your image" height="15%" width="65%">
         </div>
     </div>
 </body>
